# Connect-4-TOOT-OTTO

./: Cargo.toml  README.md  run.sh
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: main.rs  sidebar.rs
frontend/src/pages/: connect_4.rs  connect_4_canvas.rs  connect_4_human_side.rs  connect_4_side.rs  game_history_side.rs  how_to_c4.rs  how_to_c4_side.rs  how_to_toot_side.rs  mod.rs  score_board.rs  score_board_side.rs  scores_side.rs  toot_otto.rs  toot_otto_canvas.rs  toot_otto_human_side.rs  toot_otto_side.rs  welcome.rs  welcome_side.rs
frontend/src/pages/fullpage/: connect_4.rs  connect_4_human.rs  game_history.rs  how_to_c4.rs  how_to_toot.rs  mod.rs  scores.rs  toot_otto.rs  toot_otto_human.rs  welcome.rs
