[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
# mongodb = "2.1.0"
bson = "2.1.0"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync"]