[package]
name = "front-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19"
yew-router = "^0.16"
stdweb = "0.4.20"
gloo = "0.6.1"
gloo-utils = "0.1.2"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.53"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "TextMetrics",
  "ImageData",
  "ImageBitmap"
]