[package]
name = "front-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19"
yew-router = "^0.16"
yew-stdweb = "0.18.0"
stdweb = "0.4.20"
gloo = "0.6.1"
gloo-utils = "0.1.2"
wasm-bindgen = "0.2"
serde = "1.0.136"
wasm-bindgen-futures = "0.4.29"
reqwasm = "0.5.0"
serde_json = "1.0.59"
chrono = "0.4.19"

[dependencies.web-sys]
version = "0.3.56"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "TextMetrics",
  "console",
  "HtmlElement",
  "MouseEvent",
  "DomRect",
]

[dependencies.reqwest]
version = "0.11.10"
features = [
  "json",
]
